--- a/threedangles/test/CMakeLists.txt
+++ b/threedangles/test/CMakeLists.txt
@@ -20,7 +20,7 @@ macro(macro_test) # ${ARGN} link libraries
     target_include_directories(${TEST_EXE} PUBLIC 
         ${CMAKE_SOURCE_DIR}/threedangles/src
     )
-    target_link_libraries(${TEST_EXE} PRIVATE GTest::gtest GTest::gmock ${TEST_LINKS})
+    target_link_libraries(${TEST_EXE} PRIVATE GTest::gtest GTest::gmock engine_obj ${TEST_LINKS})
     add_custom_command(TARGET ${TEST_EXE} POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:GTest::gtest_main> $<TARGET_FILE_DIR:${TEST_EXE}>
         COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:GTest::gtest> $<TARGET_FILE_DIR:${TEST_EXE}>
@@ -50,44 +50,37 @@ endmacro()
 macro_test(
     EXE TestVec4
     FILE "TestVec4.cpp"
-    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 macro_test(
     EXE TestMat4
     FILE "TestMat4.cpp"
-    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 macro_test(
     EXE TestQuat
     FILE "TestQuat.cpp"
-    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 macro_test(
     EXE TestColor
     FILE "TestColor.cpp"
-    FILES
 )
 
 macro_test(
     EXE TestTexture
     FILE "TestTex3.cpp"
-    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 macro_test(
     EXE TestVertex
     FILE "TestVertex.cpp"
-    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 
 macro_test(
     EXE TestTriangle
     FILE "TestTriangle.cpp"
-    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 macro_test(
@@ -96,12 +89,10 @@ macro_test(
     FIXTURES
         plain_cube.obj
         normal_cube.obj
-    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
 
 
 macro_test(
     EXE TestEngine
     FILE "TestEngine.cpp"
-    LINKS $<TARGET_OBJECTS:engine_obj> $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES>
 )
