--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ if(DETECT_CUDA)
     if(CMAKE_CUDA_COMPILER)
         find_package(CUDAToolkit 11)
         if (CUDAToolkit_FOUND)
+            message(STATUS "found CUDAToolkit >11")
             enable_language(CUDA)
             #set(LIB_CUDA cudart cudart_static)
             #set(CMAKE_CUDA_STANDARD 10.2)
