--- a/threedangles/CMakeLists.txt
+++ b/threedangles/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿# CMakeList.txt : CMake project for threedangles, include source and define
 # project specific logic here.
 #
-cmake_minimum_required (VERSION 3.17)
+cmake_minimum_required (VERSION 3.18.1)
 
 set (CMAKE_CXX_STANDARD 17)
 set (CMAKE_DEBUG_POSTFIX d)
@@ -13,7 +13,7 @@ if (WIN32)
     set(LIB_SDL2main SDL2::SDL2main)
 endif()
 
-add_library(engine_obj OBJECT 
+set(engine_sources
     ${CMAKE_CURRENT_SOURCE_DIR}/src/CPUID.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Vec4.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Mat4.cpp
@@ -33,27 +33,29 @@ add_library(engine_obj OBJECT
 )
 
 if (CMAKE_CUDA_COMPILER)
-    set_target_properties(engine_obj PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-    target_include_directories(engine_obj PUBLIC ${CUDAToolkit_INCLUDE_DIRS})
-    target_sources(engine_obj PUBLIC
+    set(engine_sources
+        ${engine_sources}
         ${CMAKE_CURRENT_SOURCE_DIR}/src/cuda/GPUInfo.cu
     )
 endif()
+
+add_library(engine_obj STATIC
+    ${engine_sources}
+)
+set_target_properties(engine_obj PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
 target_include_directories(engine_obj PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src
     ${CUDAToolkit_INCLUDE_DIRS}
 )
-
 target_link_libraries(engine_obj PUBLIC SDL2::SDL2 ${LIB_SDL2main} SDL2::SDL2_image)
 
+##### ---- #####
 add_executable(threedangles "threedangles.cpp")
-
 target_include_directories(threedangles PRIVATE
     $<TARGET_PROPERTY:engine_obj,INCLUDE_DIRECTORIES>
 )
-
-target_link_libraries(threedangles PRIVATE $<TARGET_PROPERTY:engine_obj,LINK_LIBRARIES> $<TARGET_OBJECTS:engine_obj>)
+target_link_libraries(threedangles PRIVATE engine_obj)
 
 ############################### tests ########################################
 if(BUILD_TESTING)
